--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ice2",
+  "name": "ice5",
   "version": "1.0.0",
-  "description": "Repo for WEBD6201-ICE2",
+  "description": "demo project for ice5",
   "main": "index.js",
   "author": "Mitchell Peltenburg",
   "license": "MIT",
@@ -10,5 +10,8 @@
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.13"
   }
 }
