--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ice6",
+  "name": "webd6201-w2022-ice7",
   "version": "1.0.0",
-  "description": "demo project for ice6",
+  "description": "demo project for ice7",
   "main": "index.js",
-  "author": "Mitchell Peltenburg",
+  "author": "Tom Tsiliopoulos",
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
