--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webd6201-w2022-ice7",
+  "name": "ICE-7",
   "version": "1.0.0",
-  "description": "demo project for ice7",
+  "description": "ICE 7 for WEBD6201 in the Winter 2022 Semester",
   "main": "index.js",
   "author": "Tom Tsiliopoulos",
   "license": "MIT",
